--- a/base02/index.html
+++ b/base02/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lusitana:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./src/index.css">
 </head>
 
