Add clsx for conditional class names, implement game over logic, and enhance styles in App component

--- a/base10/index.html
+++ b/base10/index.html
@@ -8,6 +8,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="/src/index.css" />
+    <meta charset="UTF-8">
   </head>
   <body>
     <div id="root"></div>
